# transpiler

./: .clang-format  .gitignore  CMakeLists.txt  build_llvm.sh  count.sh  llvm_build.sh  makefile
analysis/: analysis.ipynb
cast/: AST.cpp  CMakeLists.txt  CPUCodeGen.cpp  CPUFusion.cpp  CircuitGraph.cpp  CostModel.cpp  FPGAConfig.cpp  FPGAFusion.cpp  FPGAInst.cpp  FPGAInstGen.cpp  GateMatrix.cpp  Parser.cpp  Polynomial.cpp  QuantumGate.cpp  ast.cpp
demos/: CMakeLists.txt  demo_fusion.cpp  demo_ptx.cpp
examples/qch/rqc/: q20_292_206.qch
include/: ast.h  lexer.h  parser.h  token.h  utils.h
include/cast/: CircuitGraph.h  CircuitGraphContext.h  CostModel.h  FPGAConfig.h  FPGAInst.h  Fusion.h  GateMatrix.h  Parser.h  Polynomial.h  QuantumGate.h  ScalarKind.h  UnitaryPermMatrix.h  ast.h  cpu.h  gpu.h  simulate.h
include/openqasm/: ast.h  lexer.h  parser.h  token.h  utils.h
include/parse/: lexer.h
include/qch/: GateMatrix.h  ast.h  cas.h
include/quench/: CircuitGraph.h  ComplexMatrix.h  GateMatrix.h  Polynomial.h  QuantumGate.h  ast.h  cas.h  cpu.h  parser.h  simulate.h
include/saot/: CircuitGraph.h  CircuitGraphContext.h  ComplexMatrix.h  CostModel.h  FPGAConfig.h  FPGAInst.h  Fusion.h  NewParser.h  Parser.h  Polynomial.h  QuantumGate.h  ScalarKind.h  UnitaryPermMatrix.h  ast.h  cpu.h  gpu.h  parser.h  simulate.h
include/simulation/: JIT.h  KernelGen.h  KernelGenInternal.h  KernelManager.h  Simulator.h  StatevectorCPU.h  StatevectorCUDA.h  codegen.h  cpu.h  irGen.h  ir_generator.h  jit.h  matrices.h  saotContext.h  statevector.h  tplt.h  transpiler.h  types.h  utils.h
include/tests/: Test.h  TestKit.h
include/timeit/: timeit.h
include/utils/: CommandLine.h  Formats.h  IteratorBase.h  List.h  ObjectPool.h  PODArray.h  PODVariant.h  PODVector.h  StatevectorCPU.h  StatevectorCUDA.h  StringRef.h  TaskDispatcher.h  Vector.h  complex.h  iocolor.h  is_pod.h  square_matrix.h  statevector.h  utils.h
openqasm/: CMakeLists.txt  ast.cpp  expression.cpp  if_then_else_stmt.cpp  lexer.cpp  openqasm.cpp  parser.cpp  pretty_print.cpp  token.cpp  utils.cpp
performance/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark_irgen.cpp  benchmark_tplt.cpp  bm_irgen.cpp  bm_irgen_circuit.cpp  bm_irgen_u2q.cpp  bm_tplt.cpp  bm_tplt_u2q.cpp  compile.sh  compile_benchmark.sh  correctness.cpp  fidelity.cpp  full_gate_bcmk.cpp  gate_benchmark.cpp  gen_file.c  gen_file.cpp  gen_file.h  gen_file.inc  gen_file.ll  gen_file.ll.asm  gen_file.ll.ll  ir_benchmark.cpp  perf  perftest  samplesh.sh  saved.cpp  single_gate.cpp  test.cpp  test_irgen.cpp  test_tplt.cpp
qch/: CMakeLists.txt  GateMatrix.cpp  ast.cpp  cas.cpp  genCPU.cpp
quench/: CMakeLists.txt  CircuitGraph.cpp  GateMatrix.cpp  Polynomial.cpp  QuantumGate.cpp  ast.cpp  cas.cpp  cpu.cpp  parser.cpp
saot/: CMakeLists.txt  CPUCodeGen.cpp  CPUFusion.cpp  CircuitGraph.cpp  CostModel.cpp  FPGAConfig.cpp  FPGAFusion.cpp  FPGAInst.cpp  FPGAInstGen.cpp  Fusion.cpp  GateMatrix.cpp  NewParser.cpp  Parser.cpp  Polynomial.cpp  QuantumGate.cpp  ast.cpp  cpu.cpp  parser.cpp
simulation/: CMakeLists.txt  KernelApplyCPU.cpp  KernelGenCPU.cpp  KernelGenCUDA.cpp  KernelGenConfigs.cpp  KernelGenGPU.cpp  KernelGenInternal.cpp  KernelManager.cpp  KernelManagerBase.cpp  KernelManagerCPU.cpp  KernelManagerCUDA.cpp  StatevectorCUDA.cpp  StatevectorCUDA.cu  codegen.cpp  cpu.cpp  gen_alt_kernel.cpp  gen_kernel.cpp  gen_ptx.cpp  gen_u2q.cpp  gen_u3.cpp  irGen.cpp  ir_generator.cpp  jit.cpp  openqasm_to_ir.cpp  prepare_param.cpp  transpiler.cpp  types.cpp  utils.cpp
src/: expression.cpp  if_then_else_stmt.cpp  lexer.cpp  openqasm.cpp  parser.cpp  pretty_print.cpp
tests/: CMakeLists.txt  TestKit.cpp  ir.ll  ir.ll.c  ir.ll.ll  testApplyGate.cpp  testCpuH.cpp  testCpuRzParam.cpp  testCpuU.cpp  testCudaU.cpp  testFusionCPU.cpp  testGateMatMul.cpp  testStatevectorCUDA.cpp  test_applyGate.inc  test_h.inc  test_main.cpp  test_u.inc  unit_test.cpp  unit_test.h
tests/circuits/: p2.qch  q8_112_76.qch
timeit/: CMakeLists.txt  timeit.cpp
tools/: CMakeLists.txt  blank.cpp  correctness_kernel.cpp  cost_model.cpp  cuda_playground.cu  fpga_playground.cpp  fpga_vary_buffer.cpp  gen_u2q.cpp  gen_u3.cpp  general_kernel.cpp  ir_gen.cpp  jit_playground.cpp  kernel.cpp  openqasm_to_qch.cpp  openqasm_to_quench.cpp  pg_polynomial.cpp  playground.cpp  prefetch.cpp  ptx_playground.cpp  qasm_to_cast.cpp  qasm_to_qch.cpp  qasm_to_saot.cpp  scratch.cpp  test_main.cpp
utils/: CMakeLists.txt  CommandLine.cpp  StatevectorCUDA.cpp  StatevectorCUDA.cu  StringRef.cpp  TaskDispatcher.cpp  square_matrix.cpp  utils.cpp
